syntax = "proto3";

package com.pojtinger.felix.bofied;

import "google/protobuf/empty.proto";

option go_package = "github.com/pojntfx/bofied/pkg/api/proto/v1";

service MetadataService {
  rpc GetMetadata(google.protobuf.Empty) returns (MetadataMessage);
}

message MetadataMessage {
  string AdvertisedIP = 1;
  int32 TFTPPort = 2;
  int32 HTTPPort = 3;
}
